# itu-g711-codec

./: CMakeLists.txt  README.md
src/: Makefile  Plc.cpp  codec.cpp  decode-cmd.cpp  encode-cmd.cpp  unit-tests.cpp
src/itu-g711-codec/: codec.h
src/itu-g711-plc/: Plc.h
src/tests/: clip-7-pcm.txt  demo-1.cpp  unit-tests.cpp
tests/: clip-7a-pcm.txt
